--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -3,10 +3,10 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<title>Spam Fan</title>
+		<title>Email Marketing Blog</title>
 	</head>
 		<body>
-			<h1>Spam Fan</h1>
+			<h1>Email Marketing Blog</h1>
 		<p>Email Marketing tip and tricks</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
