--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,13 +5,17 @@
 	<title>Email Marketing Blog</title>
 	</head>
 	<body>
-		<img src="images/logo.jpg">
+		<img id= "logo" src="images/logo.jpg">
 		<nav>
 			<a href="#">Blog</a>
 			<a href="#">About Us</a>
 			<a href="#">Services</a>
 			<a href="#">Resources</a>
+			<form id="search-bar">
+				Search the blog
+			</form>
 		</nav>
+		
 		<header>
 		<h1>Email Marketing Blog</h1>
 		<p id="slogan">Tips, tricks and tools to convert leads through email marketing</p>
@@ -28,17 +32,18 @@
 
 		<section class="main-post">
 			<article>
-			<img src="images/work-flow.jpg">
+			<img id= "main-blog-image" src="images/work-flow.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a href="#">Read on</a>
 			</article>
 		</section>
 
-		<form>
+		<form id="sign-up">
 			<p>
 				Want to build your marketing strategy and nurture your funnel?
 			</p>
@@ -50,73 +55,80 @@
 		</form>
 
 		<article>
-			<img src="images/abstract-lights.jpg">
+			<img class="blog-images" src="images/abstract-lights.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a href="#">Read on</a>
 		</article>
 
 		<article>
-			<img src="images/mobile.jpg">
+			<img class="blog-images" src="images/mobile.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a href="#">Read on</a>
 		</article>
 
 		<article>
-			<img src="images/head-phones.jpg">
+			<img class="blog-images" src="images/head-phones.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a href="#">Read on</a>
 		</article>
 
 		<article>
-			<img src="images/color-cloud.jpg">
+			<img class="blog-images" src="images/color-cloud.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a href="#">Read on</a>
 		</article>
 
 		<article>
-			<img src="images/business-analytics.jpg">
+			<img class="blog-images" src="images/business-analytics.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a href="#">Read on</a>
 		</article>
 
 		<article>
-			<img src="images/abstract-blue-concrete.jpg">
+			<img class="blog-images" src="images/abstract-blue-concrete.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a href="#">Read on</a>
 		</article>
 
 		<article>
-			<img src="images/chart-data.jpg">
+			<img class="blog-images" src="images/chart-data.jpg">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a href="#">Read on</a>
 		</article>
 		<a href="mailto:ellenfouweather@gmail.com">Email me!</a>
 		<footer>
