--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,28 +5,35 @@
 	<title>Email Marketing Blog</title>
 	</head>
 	<body>
+	<section>
 		<img id= "logo" src="images/logo.jpg">
 		<nav>
 			<a href="#">Blog</a>
 			<a href="#">About Us</a>
 			<a href="#">Services</a>
 			<a href="#">Resources</a>
+			</nav>
 			<form id="search-bar">
-				Search the blog
+			<label>Search the blog</label>
+			<input type="text" name="Search">
+
 			</form>
-		</nav>
-		
+	</section>
+
 		<header>
 		<h1>Email Marketing Blog</h1>
 		<p id="slogan">Tips, tricks and tools to convert leads through email marketing</p>
 		</header>
 		
 		<p>Lost in your funnel? Generating leads that don't convert? Need to generate quick results on a low budget? Enter email marketing...</p>
-		<h4>The Email Marketing Blog offers free tools and resources to get you started</h4>
+		<h3>The Email Marketing Blog offers free tools and resources to get you started</h3>
+		
 		
 		<section id="main-post">
 			<article>
 			<img src="images/work-flow.jpg">
+			<h3>Email Design Best Practices</h3>
+			<hr>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -36,20 +43,22 @@
 			<a href="#">Read on</a>
 			</article>
 		</section>
+		
 
-		<form id="sign-up">
-			<p>
-				Want to build your marketing strategy and nurture your funnel?
-			</p>
-			<p>
-				Sign up!
-			</p>
-
-
+		<form>
+			<p>Want to recieve weekly blog updates?</p>
+			<label>Name:</label>
+			<input type="text" name="name">
+			<label>Email:</label>
+			<input type="email" name="email">
+			<button type="submit">Sign me up!</button>
 		</form>
+
 		<section class="secondary-posts">
 			<article>
 				<img src="images/abstract-lights.jpg">
+				<h3>How to Double your Email's CTOR</h3>
+				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -58,10 +67,11 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<a href="#">Read on</a>
 			</article>
-		</section>
-		<section class="secondary-posts">
+	
 			<article>
 				<img src="images/mobile.jpg">
+				<h3>Everything you Need to Know About Newsletters</h3>
+				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -70,10 +80,11 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<a href="#">Read on</a>
 			</article>
-		</section>
-		<section class="secondary-posts">
+
 			<article>
 				<img src="images/head-phones.jpg">
+				<h3>Key Email Marketing Metrics</h3>
+				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -83,11 +94,12 @@
 				<a href="#">Read on</a>
 			</article>
 
-		</section>
+	
 
-		<section class="secondary-posts">
 			<article>
 				<img src="images/color-cloud.jpg">
+				<h3>Get Started with A/B Testing</h3>
+				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -96,11 +108,13 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<a href="#">Read on</a>
 			</article>
-		</section>
+	
 
-		<section class="secondary-posts">
+		
 				<article>
 				<img src="images/business-analytics.jpg">
+				<h3>Creative Block? Top 10 Trick for Content Creation</h3>
+				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -109,11 +123,13 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<a href="#">Read on</a>
 			</article>
-		</section>
+	
 
-		<section class="secondary-posts">
+		
 			<article>
 				<img src="images/abstract-blue-concrete.jpg">
+				<h3>How Can I Increase my Blog Subscribers?</h3>
+				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -122,11 +138,12 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<a href="#">Read on</a>
 			</article>
-		</section>
+	
 
-		<section class="secondary-posts">
 			<article>
 				<img src="images/chart-data.jpg">
+				<h3>Prove the ROI of your Email Marketing</h3>
+				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
