--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -153,11 +153,14 @@
 				<a href="#">Read on</a>
 			</article>
 		</section>
-		<a href="mailto:ellenfouweather@gmail.com">Email me!</a>
+		
 		<footer>
-			<a href="#" target="_blank"><img src="#"></a>
-			<a href="#" target="_blank"><img src="#"></a>
-			<a href="#" target="_blank"><img src="#"></a>
+			<nav>
+				<a href="#" target="_blank"><img class="social-media" src="images/insta.png"></a>
+				<a href="#" target="_blank"><img class="social-media" src="images/pin.png"></a>
+				<a href="#" target="_blank"><img class="social-media" src="images/li.png"></a>
+				<a href="mailto:ellenfouweather@gmail.com">ellenfouweather@gmail.com</a>
+			</nav>
 		</footer>
 
 	</body>
