nav-changes-background-image

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -18,17 +18,19 @@
 			<input type="text" name="Search" id="search">
 		</form>
 	</header>
-	<section id="intro">
-		<h1>Email Marketing Blog</h1>
+	<div class="intro">
+		<div class="intro-inside">
+			<h1>Email Marketing Blog</h1>
 		<p id="slogan">Tips, tricks and tools to convert leads through email marketing</p>
-	</section>
+		</div>
+	</div>
 	<section>	
 		<p>Lost in your funnel? Generating leads that don't convert? Need to generate quick results on a low budget? Enter email marketing...</p>
 		<h3>The Email Marketing Blog offers free tools and resources to get you started</h3>
 	</section>	
 	<section id="main-post">
 		<article>
-			<img src="images/work-flow.jpg">
+			<img src="images/work-flow.jpg" alt="work-flow">
 			<h3>Email Design Best Practices</h3>
 			<hr>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -54,7 +56,7 @@
 		<section class="secondary-posts">
 			<h2>Recent Posts</h2>
 			<article>
-				<img src="images/abstract-lights.jpg">
+				<img src="images/abstract-lights.jpg" alt="abstract-lights">
 				<h3>How to Double your Email's CTOR</h3>
 				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -67,7 +69,7 @@
 			</article>
 	
 			<article>
-				<img src="images/mobile.jpg">
+				<img src="images/mobile.jpg" alt="mobile">
 				<h3>Everything you Need to Know About Newsletters</h3>
 				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -80,7 +82,7 @@
 			</article>
 
 			<article>
-				<img src="images/head-phones.jpg">
+				<img src="images/head-phones.jpg" alt="workspace">
 				<h3>Key Email Marketing Metrics</h3>
 				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -95,7 +97,7 @@
 	
 
 			<article>
-				<img src="images/color-cloud.jpg">
+				<img src="images/color-cloud.jpg" alt="color-cloud">
 				<h3>Get Started with A/B Testing</h3>
 				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -139,7 +141,7 @@
 	
 
 			<article>
-				<img src="images/chart-data.jpg">
+				<img src="images/chart-data.jpg" alt="data-charts">
 				<h3>Prove the ROI of your Email Marketing</h3>
 				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -154,9 +156,9 @@
 		
 		<footer>
 			<nav>
-				<a href="#" target="_blank"><img class="social-media" src="images/insta.png"></a>
-				<a href="#" target="_blank"><img class="social-media" src="images/pin.png"></a>
-				<a href="#" target="_blank"><img class="social-media" src="images/li.png"></a>
+				<a href="#" target="_blank"><img alt="instagram" class="social-media" src="images/insta.png"></a>
+				<a href="#" target="_blank"><img alt="pinterest" class="social-media" src="images/pin.png"></a>
+				<a href="#" target="_blank"><img alt="LinkedIn" class="social-media" src="images/li.png"></a>
 				<a href="mailto:ellenfouweather@gmail.com">ellenfouweather@gmail.com</a>
 			</nav>
 		</footer>
