--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -12,11 +12,12 @@
 			<a href="#">About Us</a>
 			<a href="#">Services</a>
 			<a href="#">Resources</a>
-		</nav>
-		<form id="search-bar">
+			<form id="search-bar">
 			<label for="search">Search the blog</label>
 			<input type="text" name="Search" id="search">
-		</form>
+			</form>
+		</nav>
+		
 	</header>
 	<div class="intro">
 		<div class="intro-inside">
@@ -24,7 +25,7 @@
 		<p id="slogan">Tips, tricks and tools to convert leads through email marketing</p>
 		</div>
 	</div>
-	<section>	
+	<section id="copy-1">	
 		<p>Lost in your funnel? Generating leads that don't convert? Need to generate quick results on a low budget? Enter email marketing...</p>
 		<h3>The Email Marketing Blog offers free tools and resources to get you started</h3>
 	</section>	
