--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -5,54 +5,57 @@
 	<title>Email Marketing Blog</title>
 </head>
 <body>
-	<header>
-		<img id="logo" src="images/logo.jpg" alt="EMB Logo">
-		<nav>
-			<a href="#">Blog</a>
-			<a href="#">About Us</a>
-			<a href="#">Services</a>
-			<a href="#">Resources</a>
-			<form id="search-bar">
-			<label for="search">Search the blog</label>
-			<input type="text" name="Search" id="search">
-			</form>
-		</nav>
+	<div class="wrappper">
+		<header>
+			<img id="logo" src="images/logo.jpg" alt="EMB Logo">
+			<nav>
+				<a href="#">Blog</a>
+				<a href="#">About Us</a>
+				<a href="#">Services</a>
+				<a href="#">Resources</a>
+				<form id="search-bar">
+					<label for="search">Search the blog</label>
+					<input type="text" name="Search" id="search">
+				</form>
+			</nav>
 		
-	</header>
-	<div class="intro">
-		<div class="intro-inside">
-			<h1>Email Marketing Blog</h1>
-		<p id="slogan">Tips, tricks and tools to convert leads through email marketing</p>
-		</div>
-	</div>
-	<section id="copy-1">	
-		<p>Lost in your funnel? Generating leads that don't convert? Need to generate quick results on a low budget? Enter email marketing...</p>
-		<h3>The Email Marketing Blog offers free tools and resources to get you started</h3>
-	</section>	
-	<section id="main-post">
-		<article>
-			<img src="images/work-flow.jpg" alt="work-flow">
-			<h3>Email Design Best Practices</h3>
-			<hr>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<a href="#">Read on</a>
-		</article>
-	</section>
-		
+		</header>
+			<div class="intro">
+				<div class="intro-inside">
+					<h1>Email Marketing Blog</h1>
+					<p id="slogan">Tips, tricks and tools to convert leads through email marketing</p>
+				</div>
+			</div>
+		<section id="copy-1">	
+			<p>Lost in your funnel? Generating leads that don't convert? Need to generate quick results on a low budget? Enter email marketing...</p>
+			<h3>The Email Marketing Blog offers free tools and resources to get you started</h3>
+		</section>	
 
-		<form>
-			<p>Want to recieve weekly blog updates?</p>
-			<label>Name:</label>
-			<input type="text" name="name">
-			<label>Email:</label>
-			<input type="email" name="email">
-			<input type="submit" value="Sign me up!">
-		</form>
+		<section id="main-post">
+			<article>
+				<img src="images/work-flow.jpg" alt="work-flow">
+				<h3>Email Design Best Practices</h3>
+				<hr>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<a href="#">Read on</a>
+			</article>
+		</section>
+		
+		<aside>
+			<form>
+				<p>Want to recieve weekly blog updates?</p>
+				<label>Name:</label>
+				<input type="text" name="name">
+				<label>Email:</label>
+				<input type="email" name="email">
+				<input type="submit" value="Sign me up!">
+			</form>
+		</aside>
 
 		<section class="secondary-posts">
 			<h2>Recent Posts</h2>
@@ -95,8 +98,6 @@
 				<a href="#">Read on</a>
 			</article>
 
-	
-
 			<article>
 				<img src="images/color-cloud.jpg" alt="color-cloud">
 				<h3>Get Started with A/B Testing</h3>
@@ -110,9 +111,7 @@
 				<a href="#">Read on</a>
 			</article>
 	
-
-		
-				<article>
+			<article>
 				<img src="images/business-analytics.jpg">
 				<h3>Creative Block? Top 10 Trick for Content Creation</h3>
 				<hr>
@@ -124,8 +123,6 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<a href="#">Read on</a>
 			</article>
-	
-
 		
 			<article>
 				<img src="images/abstract-blue-concrete.jpg">
@@ -140,7 +137,6 @@
 				<a href="#">Read on</a>
 			</article>
 	
-
 			<article>
 				<img src="images/chart-data.jpg" alt="data-charts">
 				<h3>Prove the ROI of your Email Marketing</h3>
@@ -153,16 +149,16 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<a href="#">Read on</a>
 			</article>
-		</section>
+			</section>
 		
-		<footer>
-			<nav>
-				<a href="#" target="_blank"><img alt="instagram" class="social-media" src="images/insta.png"></a>
-				<a href="#" target="_blank"><img alt="pinterest" class="social-media" src="images/pin.png"></a>
-				<a href="#" target="_blank"><img alt="LinkedIn" class="social-media" src="images/li.png"></a>
-				<a href="mailto:ellenfouweather@gmail.com">ellenfouweather@gmail.com</a>
-			</nav>
-		</footer>
-
+			<footer>
+				<nav>
+					<a href="#" target="_blank"><img alt="instagram" class="social-media" src="images/insta.png"></a>
+					<a href="#" target="_blank"><img alt="pinterest" class="social-media" src="images/pin.png"></a>
+					<a href="#" target="_blank"><img alt="LinkedIn" class="social-media" src="images/li.png"></a>
+					<a href="mailto:ellenfouweather@gmail.com">ellenfouweather@gmail.com</a>
+				</nav>
+			</footer>
+		</div>
 	</body>
 </html>
