--- a/form/index.html
+++ b/form/index.html
@@ -27,7 +27,7 @@
 		</div>
 	</div>
 
-	<div class="container clearfix">
+	<!-- <div class="container clearfix">
 		<section id="main-post">
 			<article>
 				<img src="images/brainstorming-main-photo.jpg" alt="work-flow">
@@ -53,7 +53,7 @@
 				<input type="submit" value="Sign me up!">
 			</form>
 		</aside>
-    </div>
+    </div> -->
 
 		<section class="secondary-posts clearfix">
 			<article>
