--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -13,26 +13,23 @@
 			<a href="#">About Us</a>
 			<a href="#">Services</a>
 			<a href="#">Resources</a>
+			</nav>
 			<form id="search-bar">
 			<label for="search">Search the blog</label>
 			<input type="text" name="Search" id="search">
 			</form>
-		</nav>
-		
 	</header>
+
 	<div class="intro">
-		<div class="intro-inside">
 			<h1>Email Marketing Blog</h1>
 		<p id="slogan">Tips, tricks and tools to convert leads through email marketing</p>
-		</div>
 	</div>
 
 	<div class="container clearfix">
 		<section id="main-post">
-			<article>
-				<img src="images/brainstorming-main-photo.jpg" alt="work-flow">
-				<h3>Email Design Best Practices</h3>
+				<h3>The Beginner's Guide to Email Marketing</h3>
 				<hr>
+				<img src="images/brainstorming-main-photo.jpg" alt="work-flow">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -40,11 +37,10 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<a href="#">Read on</a>
-			</article>
 		</section>
 
 		<aside>
-			<form>
+			<form id="sign-up">
 				<p>Want to recieve weekly blog updates?</p>
 				<label>Name:</label>
 				<input type="text" name="name">
