--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -26,22 +26,16 @@
 	</div>
 
 	<div class="container clearfix">
-		<section id="main-post">
+	<!-- 	<section id="main-post">
 				<h3>The Beginner's Guide to Email Marketing</h3>
-				<hr>
 				<img src="images/brainstorming-main-photo.jpg" alt="work-flow">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<a href="#">Read on</a>
-		</section>
+				
+				<a href="#">Download</a>
+		</section> -->
 
 		<aside>
+			<p>Want to recieve weekly blog updates?</p>
 			<form id="sign-up">
-				<p>Want to recieve weekly blog updates?</p>
 				<label>Name:</label>
 				<input type="text" name="name">
 				<label>Email:</label>
