search-bar-not working

--- a/unit-8/index.html
+++ b/unit-8/index.html
@@ -10,20 +10,23 @@
         <![endif]-->
 </head>
 <body>
+	
 	<header>
-		<img id="logo" src="images/logo.jpg" alt="EMB Logo">
+		<img id="logo" src="images/logo-emb.png" alt="EMB Logo">
+		<label for="toggle-2"><img src="images/search.png"></label>
+        <input type="checkbox" id="toggle-2">
+		<form id="search-bar">
+			<input type="text" placeholder="Search the blog..." name="Search" id="search">
+			<button><img src="images/search.png"></button>
+		</form>
 		<label for="toggle" id="menu">Menu</label>
         <input type="checkbox" id="toggle">
-		<nav id="header-nav">
+		<nav>
 			<a href="#">Blog</a>
 			<a href="#">About Us</a>
 			<a href="#">Services</a>
 			<a href="#">Resources</a>
 		</nav>
-		<form id="search-bar">
-			<label for="search">Search</label>
-			<input type="text" name="Search" id="search">
-		</form>
 	</header>
 
 	<div class="intro">
@@ -60,14 +63,12 @@
 		<section class="secondary-posts clearfix">
 			<article>
 				<img src="images/mobile.jpg" alt="mobile">
-				<h3>Get responsive! Designing for mobile</h3>
+				<h3>Get responsive! Design for mobile</h3>
 				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				consequat. </p>
 				<a href="#">Read on</a>
 			</article>
 		
@@ -79,9 +80,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				consequat. </p>
 				<a href="#">Read on</a>
 			</article>
 	
@@ -93,9 +92,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				consequat. </p>
 				<a href="#">Read on</a>
 			</article>
 	
@@ -106,38 +103,26 @@
 				<h3>Top 10 Tricks for Content Creation</h3>
 				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				tempor incididunt ut labore et dolore magna aliqua.  </p>
 				<a href="#">Read on</a>
 			</article>
 	
 		
 			<article>
 				<img src="images/desk-mac.jpg">
-				<h3>How Can I Increase my Blog Subscribers?</h3>
+				<h3>How Can I Get More Subscribers?</h3>
 				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				tempor incididunt ut labore et dolore magna aliqua.  </p>
 				<a href="#">Read on</a>
 			</article>
 	
 			<article>
 				<img src="images/chart-data.jpg" alt="data-charts">
-				<h3>Prove the ROI of your Email Marketing</h3>
+				<h3>ROI of Email Marketing</h3>
 				<hr>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				tempor incididunt ut labore et dolore magna aliqua. </p>
 				<a href="#">Read on</a>
 			</article>
 		</section>
